--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,7 @@
 <ul class="nav" role="menu">
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}authors/">Authors</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}tags/">Tags</a></li>
-    <li class="nav-getting-started" role="menuitem"><a href="{{site.baseurl}}contribute/">Contribute</a>
+    <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
+    <li class="nav-about" role="menuitem"><a href="/authors/">Authors</a></li>
+    <li class="nav-about" role="menuitem"><a href="/tags/">Tags</a></li>
+    <li class="nav-getting-started" role="menuitem"><a href="/contribute/">Contribute</a>
     </li>
 </ul>
