--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,5 +3,5 @@
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}tags/">Tags</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}authors/">Authors</a></li>
-    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}contribute/">Contribute</a></li>
+    <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}tag/how-to-contribute/">Contribute</a></li>
 </ul>
