--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,27 +70,9 @@
 }
     </script>
 
-<script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          extensions: [
-            "MathMenu.js",
-            "MathZoom.js",
-            "AssistiveMML.js",
-            "a11y/accessibility-menu.js"
-          ],
-          jax: ["input/TeX", "output/CommonHTML"],
-          TeX: {
-            extensions: [
-              "AMSmath.js",
-              "AMSsymbols.js",
-              "noErrors.js",
-              "noUndefined.js",
-            ]
-          }
-        });
-      </script>
-<script type="text/javascript" async
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<!--KATEX: https://github.com/linjer/jekyll-katex-->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
+    integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
 <meta name="generator" content="Jekyll 3.6.2" />
 <link rel="alternate" type="application/rss+xml"
