--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -5,7 +5,6 @@ title: Tag Page
 cover: false
 class: 'tag-template'
 navigation: True
-logo: 'assets/images/ghost.png'
 ---
 
 <!-- default -->
@@ -14,16 +13,17 @@ logo: 'assets/images/ghost.png'
 <!-- The big featured header, it uses blog cover image as a BG if available -->
 <!-- #tag -->
 {% include dynamic_tag_info.html %}
-<header class="site-header outer {% if cover or page.cover %}" style="background-image: url({{ site.baseurl }}{% if cover %}{{ cover }}{% else %}{{ page.cover }}{% endif%}) {% else %}no-cover{% endif %}">
+<header class="site-header outer {% if cover or page.cover %}"
+    style="background-image: url({{ site.baseurl }}{% if cover %}{{ cover }}{% else %}{{ page.cover }}{% endif%}) {% else %}no-cover{% endif %}">
     <div class="inner">
         {% include site-nav.html %}
         <div class="site-header-content">
             <h1 class="site-title">{{ page.tag | capitalizeall }}</h1>
             <h2 class="site-description">
                 {% if tag_description %}
-                    {{ tag_description }}
+                {{ tag_description }}
                 {% elsif page.tag %}
-    			    A collection of {{ paginator.total_posts }} posts
+                A collection of {{ paginator.total_posts }} posts
                 {% endif %}
             </h2>
         </div>
